--- a/Register.html
+++ b/Register.html
@@ -25,11 +25,11 @@
         input[type="email"],
         input[type="password"] {
             margin-top: 20px;
-            padding: 10px;  /* Adjust padding */
-            width: 80%;  /* Control width for better size */
-            max-width: 400px;  /* Max width for large screens */
+            padding: 10px;  
+            width: 80%;
+            max-width: 400px; 
             text-align: left;
-            box-sizing: border-box;  /* Includes padding in width calculation */
+            box-sizing: border-box; 
         }
         input[type="submit"] {
             background-color: antiquewhite;
@@ -37,7 +37,7 @@
             font-weight: bold;
             cursor: pointer;
             font-size: large;
-            padding: 10px 20px;  /* Adjust padding for submit button */
+            padding: 10px 20px;  
         }
         input[type='submit']:hover {
             background-color: darkgray;
@@ -92,7 +92,7 @@
                 errorElement.style.display = "inline";
                 setTimeout(() => {
                     errorElement.style.display = "none"; 
-                }, 10000); // 10 seconds
+                }, 10000);
             }
 
             const usernamePattern = /^[A-Za-z0-9]{5,15}$/;
